--- a/Flexbox First Look (JamesWilliamson, 2013)/flexbox-demo.htm
+++ b/Flexbox First Look (JamesWilliamson, 2013)/flexbox-demo.htm
@@ -8,13 +8,13 @@
 <body>
 	<section class="flex-container">
 		<div class="box flex1">ONE</div>
-		<div class="box flex1">TWO</div>
-		<div class="box flex1">THREE</div>
-		<div class="box flex2">FOUR</div>
+		<div class="box flex2">TWO</div>
+		<div class="box flex3">THREE</div>
+<!-- 		<div class="box flex2">FOUR</div>
 		<div class="box flex2">FIVE</div>
 		<div class="box flex2">SIX</div>
 		<div class="box flex3">SEVEN</div>
-		<div class="box flex3">EIGHT</div>
+		<div class="box flex3">EIGHT</div> -->
 	</section>
 </body>
 </html>
