--- a/Flexbox First Look (JamesWilliamson, 2013)/flexbox-demo.htm
+++ b/Flexbox First Look (JamesWilliamson, 2013)/flexbox-demo.htm
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-	<meta charset="UTF-8">
-	<title>FlexBox Demo</title>
-	<link rel="stylesheet" href="flexbox-demo.css">
+    <meta charset="UTF-8">
+    <title>FlexBox Demo</title>
+    <link rel="stylesheet" href="flexbox-demo.css">
 </head>
+
 <body>
-	<section class="flex-container">
-		<div class="box flex1">ONE</div>
-		<div class="box flex2">TWO</div>
-		<div class="box flex3">THREE</div>
-<!-- 		<div class="box flex2">FOUR</div>
+    <section class="flex-container">
+        <div class="box flex1">ONE</div>
+        <div class="box flex2 self">TWO</div>
+        <div class="box flex3">THREE</div>
+        <!-- 		<div class="box flex2">FOUR</div>
 		<div class="box flex2">FIVE</div>
 		<div class="box flex2">SIX</div>
 		<div class="box flex3">SEVEN</div>
 		<div class="box flex3">EIGHT</div> -->
-	</section>
+    </section>
 </body>
+
 </html>
